[package]
name = "nts_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
tempfile = "3.13.0"
native-tls = "0.2"
crossterm = "0.28.1"
ratatui = "0.29.0"
rodio = {version = "0.19.0", default-features = true}
reqwest = {version = "*", features = ["blocking", "json"]}
minimp3 = {version = "0.5.1", default-features = false}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'